--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,35 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Global Rules */
+
+*{
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  font-family: "Lato", sans-serif;;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  margin: 0 auto;
+}
+
+.h-100{
+  height: 100vh;
+}
+
+.row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row .col-12{
+  width: 100%;
+}
+
+.row .col-6{
+  width: 50%;
 }
